--- a/IPMS_KLK/Views/MainMenu.xaml
+++ b/IPMS_KLK/Views/MainMenu.xaml
@@ -2,40 +2,66 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IPMS_KLK.Views.MainMenu">
+    <ContentPage.Background>
+        <LinearGradientBrush EndPoint="0,1">
+            <GradientStop Color="#ffffff" Offset="0.1" />
+            <GradientStop Color="#e7e7e7" Offset="1.0" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
 
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style TargetType="Button">
-                <Setter Property="CornerRadius" Value="20" />
+                <Setter Property="CornerRadius" Value="30" />
                 <Setter Property="TextColor" Value="White"/>
                 <Setter Property="TextTransform" Value="None"/>                
                 <Setter Property="FontFamily" Value="sfBlack"/>
                 <Setter Property="Padding" Value="10,10,10,10"/>                
                 <Setter Property="VerticalOptions" Value="FillAndExpand"/>
+                
+            </Style>
+
+            <Style TargetType="Frame">
+                <Setter Property="BackgroundColor" Value="DarkGray"/>
+                <Setter Property="Padding" Value="0"/>
+                <Setter Property="CornerRadius" Value="30"/>
             </Style>
         </ResourceDictionary>        
     </ContentPage.Resources>
 
-    <ContentPage.Content>        
-        <StackLayout VerticalOptions="FillAndExpand">            
+    <ContentPage.Content>
+    
+    <StackLayout VerticalOptions="FillAndExpand">            
             <!--Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" VerticalOptions="EndAndExpand" Margin="0,0,0,10"/-->
-            
-            <StackLayout>
-                <Frame Margin="20,10,20,0" BorderColor="LightGray" HasShadow="True" CornerRadius="20">
-                    <Image Source="ui.png" Aspect="AspectFit" HorizontalOptions="Center" Margin="75,0,75,0"/>
+            <Frame BackgroundColor="Transparent" HasShadow="True" Margin="10,5,10,0">
+                <StackLayout Margin="0,15,0,0">
+                    <Grid>
+                        <StackLayout>
+                            <Label Text="Welcome,"
+                               FontSize="40"                   
+                               HorizontalTextAlignment="Start"
+                               VerticalTextAlignment="Center"
+                               Padding="0,0,0,0"
+                               TextColor="BLack"
+                               FontFamily="Cool"
+                               Margin="20,0,0,0"/>
 
-                </Frame>
-                
-                    <Label Text="Main Menu"
-                   FontSize="Large"
-                   FontAttributes="Bold"
-                   HorizontalTextAlignment="Center"
-                   VerticalTextAlignment="Center"
-                   Padding="0,0,0,0"
-                   TextColor="BLack"
-                   FontFamily="Cool"/>
-                
-            </StackLayout>
+                            <Label Text="Admin"
+                               FontSize="22"                   
+                               HorizontalTextAlignment="Start"
+                               VerticalTextAlignment="Center"
+                               Padding="0,0,0,0"
+                               TextColor="Black"
+                               FontFamily="sfRegular"
+                               Margin="20,0,0,0"/>
+                        </StackLayout>
+                          
+                        <!--<Frame Margin="20,10,20,0" BorderColor="LightGray" HasShadow="True" CornerRadius="20"/>-->
+                        <Image HeightRequest="250" Source="ui.png" Aspect="AspectFit" HorizontalOptions="EndAndExpand" Margin="0,0,0,0" VerticalOptions="EndAndExpand"/>
+                    </Grid>
+                </StackLayout>
+            </Frame>
+           
             
             <StackLayout VerticalOptions="FillAndExpand" Margin="20,10,20,20">
                         <Grid  ColumnSpacing="20" RowSpacing="20" HorizontalOptions="CenterAndExpand" VerticalOptions="FillAndExpand">
@@ -44,7 +70,7 @@
                                 <RowDefinition Height="45*"/>
                                 <RowDefinition Height="45*"/>
                                 <RowDefinition Height="45*"/>
-                                <RowDefinition Height="45*"/>
+                                <RowDefinition Height="70*"/>
                                 <RowDefinition Height="45*"/>
                     </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
@@ -54,73 +80,78 @@
 
 
                             <!--General Workers-->
-                            <Frame Padding="0"  Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" CornerRadius="20" BackgroundColor="Black">
+                            <Frame Grid.Row="0" Grid.Column="1" Grid.RowSpan="2">
                                 <Button Text="General Worker" 
                                         
                                         Command="{Binding MainMenu_to_GeneralWorkerCommand}"                               
                                         HorizontalOptions="FillAndExpand"
                                         Margin="0,0,0,2"
-                                        TextColor="white">
-                                    <Button.Background>
+                                        TextColor="Black"
+                                        BackgroundColor="#FBF7D5">
+                                    <!--<Button.Background>
                                         <LinearGradientBrush EndPoint="0,1">
                                             <GradientStop Color="#f5cec7" Offset="0.1" />
                                             <GradientStop Color="#e79796" Offset="1.0" />
                                         </LinearGradientBrush>
-                                    </Button.Background>
+                                    </Button.Background>-->
 
                         </Button>                                
                             </Frame>
                             
                             <!--Rubber Reception-->
 
-                    <Frame Padding="0"  Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" CornerRadius="20" BackgroundColor="Black">
+                    <Frame Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" >
                                 <Button Text="Rubber Reception" 
-                                                
-                                                            Command="{Binding MainMenu_to_RubberReceptionCommand}"                               
-                                                            HorizontalOptions="FillAndExpand"
-                                                            Margin="0,0,0,2"
-                                                            TextColor="White">
-                                    <Button.Background>
+                                        Command="{Binding MainMenu_to_RubberReceptionCommand}"                               
+                                        HorizontalOptions="FillAndExpand"
+                                        Margin="0,0,0,2"
+                                        TextColor="Black"
+                                        BackgroundColor="#CCE1F2">
+                                    <!--<Button.Background>
                                         <LinearGradientBrush EndPoint="0,1">
                                             <GradientStop Color="#e3ff73" Offset="0.1" />
                                             <GradientStop Color="#e27c39" Offset="1.0" />
                                         </LinearGradientBrush>
-                                    </Button.Background>
+                                    </Button.Background>-->
                                 </Button>
                             </Frame>
 
+
+                    
+
                     <!--FFB Counting-->
-                    <Frame Padding="0" Grid.Row="3" Grid.Column="0" Grid.RowSpan="3" CornerRadius="20" BackgroundColor="Black">
-                                <Button Text="FFB Counting"   
-                                                
-                                                Command="{Binding MainMenu_to_FFBCountingCommand}"                               
-                                                HorizontalOptions="FillAndExpand"
-                                                Margin="0,0,0,2"
-                                                TextColor="white">
-                                    <Button.Background>
+                    <Frame Grid.Row="3" Grid.Column="0" Grid.RowSpan="3">
+                                <Button Text="FFB Counting" 
+                                        Command="{Binding MainMenu_to_FFBCountingCommand}"                               
+                                        HorizontalOptions="FillAndExpand"
+                                        Margin="0,0,0,2"
+                                        TextColor="Black"
+                                        BackgroundColor="#C6F8E5">
+                                    <!--<Button.Background>
                                         <LinearGradientBrush EndPoint="0,1">
                                             <GradientStop Color="#09ebbe" Offset="0.1" />
                                             <GradientStop Color="#388ee9" Offset="1.0" />
                                         </LinearGradientBrush>
-                                    </Button.Background>
+                                    </Button.Background>-->
                                 </Button>
                             </Frame>
                             
                             <!--Task Inspection-->
-                    <Frame Padding="0" Grid.Row="2" Grid.Column="1" Grid.RowSpan="2"  CornerRadius="20" BackgroundColor="Black">
+                    <Frame  Grid.Row="2" Grid.Column="1" Grid.RowSpan="2"  >
                                 <Button Text="Task Inspection"
-                                                 
-                                                Command="{Binding MainMenu_to_TaskInspectionCommand}"                               
-                                                HorizontalOptions="FillAndExpand"
-                                                Margin="0,0,0,2"
-                                                TextColor="White">
-                                    <Button.Background>
-                                        <LinearGradientBrush EndPoint="0,1">
-                                            <GradientStop Color="#f1959b" Offset="0.1" />
-                                            <GradientStop Color="#dc1c13" Offset="1.0" />
-                                        </LinearGradientBrush>
-                                    </Button.Background>
-                                </Button>
+                                        Command="{Binding MainMenu_to_TaskInspectionCommand}"                               
+                                        HorizontalOptions="FillAndExpand"
+                                        Margin="0,0,0,2"
+                                        TextColor="Black"
+                                        BackgroundColor="#F9DED7">
+                                    <!---
+                            <Button.Background>
+                                <LinearGradientBrush EndPoint="0,1">
+                                    <GradientStop Color="#f1959b" Offset="0.1" />
+                                    <GradientStop Color="#dc1c13" Offset="1.0" />
+                                </LinearGradientBrush>
+                            </Button.Background>-->
+                        </Button>
                             </Frame>
 
                         <!--    <Line X1="0" Y1="0" X2="500" Y2="0" Stroke="black" 
@@ -138,35 +169,36 @@
                                    Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"/> --> 
 
                     <!--Receipt Reprint-->
-                    <Frame Padding="0" Grid.Row="4" Grid.Column="1"   CornerRadius="20" BackgroundColor="Black">
+                    <Frame  Grid.Row="4" Grid.Column="1">
                                 <Button Text="Receipt Reprint/Cancel"   
-                                                 
-                                                Command="{Binding MainMenu_to_ReceiptReprintCommand}"                               
-                                                HorizontalOptions="FillAndExpand"
-                                                Margin="0,0,0,2"
-                                                TextColor="White">
-                                            <Button.Background>
+                                        Command="{Binding MainMenu_to_ReceiptReprintCommand}"                               
+                                        HorizontalOptions="FillAndExpand"
+                                        Margin="0,0,0,2"
+                                        TextColor="Black"
+                                        BackgroundColor="#F5CDDE">
+                                            <!--<Button.Background>
                                                 <LinearGradientBrush EndPoint="0,1">
                                                     <GradientStop Color="#b8d5cd" Offset="0.1" />
                                                     <GradientStop Color="#5ca08e" Offset="1.0" />
                                                 </LinearGradientBrush>
-                                            </Button.Background>
+                                            </Button.Background>-->
                         </Button>
                             </Frame>                           
                             
                             <!--Others/Changes-->
-                    <Frame Padding="0" Grid.Row="5" Grid.Column="1"   CornerRadius="20" BackgroundColor="Black">
+                    <Frame Grid.Row="5" Grid.Column="1">
                         <Button Text="Others/Changes" 
-                                                Command="{Binding MainMenu_to_OthersChangesCommand}"                               
-                                                HorizontalOptions="FillAndExpand"
-                                                Margin="0,0,0,2"
-                                                TextColor="White" >
-                                            <Button.Background>
+                                Command="{Binding MainMenu_to_OthersChangesCommand}"                               
+                                HorizontalOptions="FillAndExpand"
+                                Margin="0,0,0,2"
+                                TextColor="Black"
+                                BackgroundColor="#E2BEF1">
+                                            <!--<Button.Background>
                                                 <LinearGradientBrush EndPoint="0,1">
                                                     <GradientStop Color="#C1B0E7" Offset="0.1" />
                                                     <GradientStop Color="#743BF8" Offset="1.0" />
                                                 </LinearGradientBrush>
-                                            </Button.Background>    
+                                            </Button.Background> -->   
                                             </Button>
                             </Frame>
 
