--- a/IPMS_KLK/Views/MainMenuOptions/GeneralWorker.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/GeneralWorker.xaml
@@ -1,52 +1,149 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="IPMS_KLK.Views.MainMenuOptions.GeneralWorker"
-             BackgroundImageSource="bg.jpg">
+             x:Class="IPMS_KLK.Views.MainMenuOptions.GeneralWorker" >
+
+    <ContentPage.Background>
+        <LinearGradientBrush EndPoint="0,1">
+            <GradientStop Color="#ffffff" Offset="0.1" />
+            <GradientStop Color="#FBF7D5" Offset="1.0" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
+    
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style TargetType="Button">
-                <Setter Property="FontSize" Value="18"/>
-                <Setter Property="FontAttributes" Value="Bold"/>
-                <Setter Property="Padding" Value="0,15,0,15"/>
-                <Setter Property="Margin" Value="0,10,0,0"/>
-                <Setter Property="CornerRadius" Value="20"/>
-                <Setter Property="BackgroundColor" Value="Black"/>
+                <Setter Property="CornerRadius" Value="30" />
                 <Setter Property="TextColor" Value="White"/>
                 <Setter Property="TextTransform" Value="None"/>
+                <Setter Property="FontFamily" Value="sfBlack"/>
+                <Setter Property="Padding" Value="10,10,10,10"/>
+                <Setter Property="VerticalOptions" Value="FillAndExpand"/>
+                <Setter Property="HorizontalOptions" Value="FillAndExpand"/>
+                <Setter Property="Margin" Value="0,0,0,2"/>
+                <Setter Property="TextColor" Value="Black"/>
+                <Setter Property="BackgroundColor" Value="#faefbe"/>
+            </Style>
 
+            <Style TargetType="Frame">
+                <Setter Property="BackgroundColor" Value="DarkGray"/>
+                <Setter Property="Padding" Value="0"/>
+                <Setter Property="CornerRadius" Value="30"/>
             </Style>
         </ResourceDictionary>
     </ContentPage.Resources>
 
     <ContentPage.Content>
-        <StackLayout>
-            <Grid>
-                <Image Source="workers.jpg" Aspect="AspectFill" HeightRequest="150"/>
-                <StackLayout  BackgroundColor="Black" Opacity="0.5"/>
-                <Label Text="GENERAL WORKERS"
-                   FontSize="Title"
-                   FontAttributes="Bold"
-                   HorizontalTextAlignment="Center"
-                   VerticalTextAlignment="Center"
-                   Padding="0,20,0,0"
-                   TextColor="White"/>
-            </Grid>
-            
-            <StackLayout Padding="20,0,20,0">
-                <Frame BorderColor="LightGray" HasShadow="True" CornerRadius="20">
-                    <StackLayout>
-                        <Button Text="1. Guided by Job" Command="{Binding GeneralWorker_to_GuidedByJobCommand}"/>
-                        <Button Text="2. Guided by Vehicle" Command="{Binding GeneralWorker_to_GuidedByVehicleCommand}"/>
-                        <Button Text="3. Add New Job" Command="{Binding GeneralWorker_to_AddNewJobCommand}"/>
-                        <Button Text="4. Add New Vehicle" Command="{Binding GeneralWorker_to_AddNewVechicleCommand}"/>
-                        <Button Text="5. Print Receipt" Command="{Binding GeneralWorker_to_PrintReceiptCommand}"/>
-                        <Button Text="6. Show Total Emp" Command="{Binding GeneralWorker_to_ShowTotalEmpCommand}"/>
-                    </StackLayout>
-                </Frame>                
-            </StackLayout>
+        <StackLayout Margin="0,0,0,0">
 
-            <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" VerticalOptions="EndAndExpand" Margin="0,0,0,10"/>
+            <Frame BackgroundColor="Transparent" HasShadow="True" Margin="20,5,20,0">
+                <StackLayout Margin="0,15,0,0">
+                    <Grid>
+                        <Image HeightRequest="200" Source="ui6.png" Aspect="AspectFit" HorizontalOptions="EndAndExpand" Margin="0,0,0,0" VerticalOptions="EndAndExpand"/>
+
+                        <StackLayout Margin="35,0,0,0" VerticalOptions="CenterAndExpand">
+                            <Label Text="General"
+                               FontSize="40"  
+                               TextColor="BLack"
+                               FontFamily="passion"/>
+
+                            <Label Text="Workers"
+                               FontSize="40"                
+                               TextColor="Black"
+                               FontFamily="passion" Margin="15,0,0,0"/>
+                        </StackLayout>
+
+
+                        <!--<Frame Margin="20,10,20,0" BorderColor="LightGray" HasShadow="True" CornerRadius="20"/>-->
+                    </Grid>
+                </StackLayout>
+            </Frame>
+            
+                    <StackLayout VerticalOptions="FillAndExpand" Margin="20,5,20,0">
+                        <Grid  ColumnSpacing="20" RowSpacing="20" VerticalOptions="FillAndExpand">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="40*"/>
+                                <RowDefinition Height="40*"/>
+                                <RowDefinition Height="40*"/>
+                                <RowDefinition Height="40*"/>
+                                <RowDefinition Height="40*"/>
+                                <RowDefinition Height="40*"/>
+                                <RowDefinition Height="70*"/>
+                                <RowDefinition Height="70*"/>
+                        </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+
+                        <!--Guided by Job-->
+                            <Frame Grid.Row="0" Grid.Column="0" Grid.RowSpan="4" >
+                            <Button Text="Guided by Job" 
+                                        Command="{Binding GeneralWorker_to_GuidedByJobCommand}" 
+                                        >                                    
+                                </Button>
+                            </Frame>
+
+
+                        <!--Guided by Vehicle-->
+                            <Frame Grid.Row="4" Grid.Column="0" Grid.RowSpan="4">
+                            <Button Text="Guided by Vehicle" 
+                                        Command="{Binding GeneralWorker_to_GuidedByVehicleCommand}"
+                                        >                                    
+                                </Button>
+                            </Frame>
+
+                        <!--Add New Job-->
+                        <Frame Grid.Row="0" Grid.Column="1" Grid.RowSpan="3">
+                            <Button Text="Add New Job" 
+                                    Command="{Binding GeneralWorker_to_AddNewJobCommand}">
+                            </Button>
+                        </Frame>
+
+                        <!--Add New Vehicle-->
+                            <Frame  Grid.Row="3" Grid.Column="1" Grid.RowSpan="3"  >
+                            <Button Text="Add New Vehicle"
+                                    Command="{Binding GeneralWorker_to_AddNewVechicleCommand}"
+                                   >                                    
+                                </Button>
+                            </Frame>
+
+                            <!--    <Line X1="0" Y1="0" X2="500" Y2="0" Stroke="black" 
+                                  StrokeThickness="2"
+                                  StrokeDashArray="1,1"
+                                  StrokeDashOffset="10"  Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"  Margin="0"/>      
+
+                    <Label Text="Others"
+                                   FontSize="Title"
+                                   FontAttributes="Bold"
+                                   HorizontalTextAlignment="Center"                                   
+                                   Padding="0,0,0,0"
+                                   TextColor="Black"
+                                   FontFamily="Cool"
+                                   Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"/> -->
+
+                        <!--Print Receipt-->
+                            <Frame  Grid.Row="6" Grid.Column="1">
+                            <Button Text="Print Receipt"   
+                                        Command="{Binding GeneralWorker_to_PrintReceiptCommand}"
+                                        >
+                                   
+                                            
+                                </Button>
+                            </Frame>
+
+                        <!--Show Total Emp-->
+                            <Frame Grid.Row="7" Grid.Column="1">
+                            <Button Text="Show Total Emp" 
+                                Command="{Binding GeneralWorker_to_ShowTotalEmpCommand}" 
+                                >                                    
+                                </Button>
+                            </Frame>
+                        </Grid>        
+                    </StackLayout>  
+
+                    <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" VerticalOptions="EndAndExpand" Margin="0,0,0,10"/>
+        
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
