--- a/IPMS_KLK/Views/MainMenuOptions/GeneralWorker.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/GeneralWorker.xaml
@@ -37,20 +37,21 @@
         <StackLayout Margin="0,0,0,0">
 
             <Frame BackgroundColor="Transparent" HasShadow="True" Margin="20,5,20,0">
-                <StackLayout Margin="0,15,0,0">
+                <StackLayout Margin="0,20,0,20">
                     <Grid>
-                        <Image HeightRequest="200" Source="ui6.png" Aspect="AspectFit" HorizontalOptions="EndAndExpand" Margin="0,0,0,0" VerticalOptions="EndAndExpand"/>
+                        <Image HeightRequest="130" Source="pngworker.png" Aspect="AspectFit" HorizontalOptions="EndAndExpand" Margin="0,0,0,0" VerticalOptions="EndAndExpand"/>
 
-                        <StackLayout Margin="35,0,0,0" VerticalOptions="CenterAndExpand">
+                        <StackLayout Margin="0,0,10,0" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand">
                             <Label Text="General"
                                FontSize="40"  
-                               TextColor="BLack"
+                               TextColor="Black"
+                               FontFamily="passion"/>
+                            <Label Text="Worker"
+                               FontSize="40"  
+                               TextColor="Black"
                                FontFamily="passion"/>
 
-                            <Label Text="Workers"
-                               FontSize="40"                
-                               TextColor="Black"
-                               FontFamily="passion" Margin="15,0,0,0"/>
+                         
                         </StackLayout>
 
 
