--- a/IPMS_KLK/Views/LoginPage.xaml
+++ b/IPMS_KLK/Views/LoginPage.xaml
@@ -21,20 +21,20 @@
     <StackLayout Padding="0" >
         
         <StackLayout VerticalOptions="EndAndExpand">
-            <Image Source="klk_logo.png" HeightRequest="80" WidthRequest="80"  Margin="0,10,0,10"/>            
+            <Image Source="klk_logo.png" HeightRequest="70" WidthRequest="70"  Margin="0,10,0,10"/>            
         </StackLayout>
         
         <StackLayout>
             <!--<Label Text="KLK IPMS" FontSize="Title"   Margin="0,10,0,0" HorizontalTextAlignment="Center"/> -->
-            <Label Text="Integrated Plantation Management Solution" FontSize="Medium"  Margin="0,10,0,0" HorizontalTextAlignment="Center"/>
+            <Label Text="Taiko Plantation Management Solution (TPMS)" FontSize="Medium"  Margin="0,0,0,0" HorizontalTextAlignment="Center"/>
         </StackLayout>
         
         <Grid VerticalOptions="EndAndExpand">          
             <StackLayout >
-                <Image Source="ui1.png" Aspect="AspectFit" HorizontalOptions="Center" Margin="75,0,75,0"/>               
+                <Image Source="ui1.png" Aspect="AspectFit" HorizontalOptions="Center" Margin="90,0,90,0"/>               
                     
                     <StackLayout>  
-                        <StackLayout Margin="50,15,50,0">
+                        <StackLayout Margin="50,0,50,0">
                             <Label Text="Enter Username : "  Margin="10,0,0,0" FontAttributes="Bold" FontSize="Medium"/>
                             <Frame BackgroundColor="Transparent" BorderColor="Transparent" Padding="0" Margin="0" CornerRadius="50" HorizontalOptions="FillAndExpand">
                                 <StackLayout Orientation="Horizontal">
