--- a/IPMS_KLK/Views/MainMenuOptions/ReceiptReprint.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/ReceiptReprint.xaml
@@ -1,8 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="IPMS_KLK.Views.MainMenuOptions.ReceiptReprint"
-             BackgroundImageSource="bg.jpg">
+             x:Class="IPMS_KLK.Views.MainMenuOptions.ReceiptReprint">
+
+    <ContentPage.Background>
+        <LinearGradientBrush EndPoint="0,1">
+            <GradientStop Color="#ffffff" Offset="0.1" />
+            <GradientStop Color="#F5CDDE" Offset="1.0" />
+        </LinearGradientBrush>
+    </ContentPage.Background>
 
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -20,18 +26,16 @@
     </ContentPage.Resources>
 
     <ContentPage.Content>
-        <StackLayout>
-            <Grid>
-                <Image Source="desk.jpg" Aspect="AspectFill" HeightRequest="150"/>
-                <StackLayout  BackgroundColor="Black" Opacity="0.5"/>
+        <StackLayout>     
                 <Label Text="RECEIPT REPRINT/CANCEL"
                    FontSize="Title"
                    FontAttributes="Bold"
                    HorizontalTextAlignment="Center"
                    VerticalTextAlignment="Center"
                    Padding="0,20,0,0"
-                   TextColor="White"/>
-            </Grid>
+                   TextColor="Black"
+                   FontFamily="sfBlack"/>
+            
 
             <StackLayout Padding="20,0,20,0" >
                 <Frame BorderColor="LightGray" HasShadow="True" CornerRadius="20">
