--- a/IPMS_KLK/Views/MainMenuOptions/TaskInspection.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/TaskInspection.xaml
@@ -15,16 +15,15 @@
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style TargetType="Button">
-                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="FontSize" Value="Medium"/>
                 <Setter Property="FontAttributes" Value="Bold"/>
-                <Setter Property="Padding" Value="0,15,0,15"/>
-                <Setter Property="Margin" Value="0,10,0,0"/>
+                <Setter Property="Padding" Value="0,5,0,5"/>
+                <Setter Property="Margin" Value="20,10,20,0"/>
                 <Setter Property="CornerRadius" Value="20"/>
-                <Setter Property="TextColor" Value="White"/>
+                <Setter Property="TextColor" Value="Black"/>
                 <Setter Property="TextTransform" Value="None"/>
                 <Setter Property="VerticalOptions" Value="CenterAndExpand"/>
                 <Setter Property="HorizontalOptions" Value="Fill"/>
-                <Setter Property="BackgroundColor" Value="Green"/>
                 <Setter Property="FontFamily" Value="sfBlack"/>
             </Style>
 
@@ -64,20 +63,24 @@
 
     <ContentPage.Content>
         <StackLayout Margin="0,20,0,0">
+            <Label Text="TASK INSPECTION" HorizontalOptions="CenterAndExpand" FontSize="Large"/>
             
             <StackLayout>
-                <Label x:Name="BunchCCounting_pg1_OC_Name"
+                <Frame Margin="30,10,30,0">
+                    <Label x:Name="BunchCCounting_pg1_OC_Name"
                        Text="OC :135-LADANG SERAPOH"
                        HorizontalOptions="CenterAndExpand"/>
+                </Frame>
+                
             </StackLayout>
 
             <Grid VerticalOptions="Center" Padding="20,10,20,0" ColumnSpacing="10" RowSpacing="15">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="70"/>
-                    <RowDefinition Height="70"/>
-                    <RowDefinition Height="70"/>
-                    <RowDefinition Height="70"/>
-                    <RowDefinition Height="70"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="60"/>
                 </Grid.RowDefinitions>
 
                 <Grid.ColumnDefinitions>
@@ -109,13 +112,29 @@
                 <ImageButton Grid.Row="0" Grid.Column="2" x:Name="btn_ScanFieldNo"/>
                 <ImageButton Grid.Row="1" Grid.Column="2" x:Name="btn_ScanTaskNo"/>
                 <ImageButton Grid.Row="2" Grid.Column="2" x:Name="btn_ScanCutterID"/>
-                <Button Grid.Row="4" Grid.Column="0" Text="RESET" BackgroundColor="Red" x:Name="btn_TaskInspection_Reset"/>
+                <Button Grid.Row="3" Grid.Column="2" Text="Reset" Grid.RowSpan="2" Margin="0"
+                        BackgroundColor="Red" x:Name="btn_TaskInspection_Reset"/>
 
             </Grid>
 
             <StackLayout Margin="20,0,20,0" VerticalOptions="EndAndExpand">
-                <Button Text="NEXT"/>
-                <Button Text="PRINT SUMMARY" IsEnabled="True"/>
+                <Button Text="Next" >
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="#f8dba4" Offset="0.1" />
+                            <GradientStop Color="#e09082" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
+                    
+                </Button>
+                <Button Text="Print Summary" IsEnabled="True">
+                    <Button.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Color="#f8dba4" Offset="0.1" />
+                            <GradientStop Color="#e09082" Offset="1.0" />
+                        </LinearGradientBrush>
+                    </Button.Background>
+                </Button>
                 <Image Source="klk_logo.png" HeightRequest="50" WidthRequest="50" Margin="0,0,0,10"/>
 
             </StackLayout>
