--- a/IPMS_KLK/Views/MainMenuOptions/FFBCountingMenuOptions/LooseFruitWeighing_InputScreen1.xaml
+++ b/IPMS_KLK/Views/MainMenuOptions/FFBCountingMenuOptions/LooseFruitWeighing_InputScreen1.xaml
@@ -53,12 +53,22 @@
 
     <ContentPage.Content>
         <StackLayout>
-
+            <Grid>
+                <Image Source="ffb.jpg" Aspect="AspectFill" HeightRequest="150" Opacity="1"/>
+                <StackLayout  BackgroundColor="Black" Opacity="0.5"/>
+                <Label Text="Loose Fruit Weighing" FontFamily="sfBlack"
+                   FontSize="Title"
+                   FontAttributes="Bold"
+                   HorizontalTextAlignment="Center"
+                   VerticalTextAlignment="Center"
+                   Padding="0,20,0,0"
+                   TextColor="white"/>
+            </Grid>
             <Frame Margin="20,20,20,0">
                 <Label x:Name="BunchCCounting_pg1_OC_Name"
                        Text="OC :135-LADANG SERAPOH"
                        HorizontalOptions="CenterAndExpand"
-                       FontFamily="sfBlack"/>
+                       FontFamily="sfBlack" FontSize="Small"/>
             </Frame>
 
             <Grid VerticalOptions="Center" Padding="20,10,20,0" ColumnSpacing="10" RowSpacing="15">
